--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -5,3 +5,15 @@
 @import "mixins"
 @import "fonts"
 @import "default"
+
+//GENERIC
+@import "generic/header"
+
+//SECTIONS
+@import "sections/hero"
+
+//CARDS
+@import "cards/notepad-card"
+
+//INCLUDES
+@import "includes/button"
