--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,5 @@
 *:not(svg):not(use), *:before, *:after {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *:active, *:hover, *:focus, a:active, a:hover {
@@ -9,9 +7,7 @@
 }
 
 input[type="checkbox"], input[type="radio"] {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
 }
 
@@ -20,18 +16,8 @@ article, aside, details, figcaption, figure, footer, header, menu, section, summ
 }
 
 nav {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-flow: row wrap;
-     -moz-box-orient: horizontal;
-     -moz-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 main {
@@ -188,26 +174,17 @@ svg:not(:root), svg {
   width: 100%;
   height: 100%;
   -webkit-transform-origin: 50% 50%;
-     -moz-transform-origin: 50% 50%;
-      -ms-transform-origin: 50% 50%;
-       -o-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
 }
 
 use {
   color: inherit;
   -webkit-transform-origin: 50% 50%;
-     -moz-transform-origin: 50% 50%;
-      -ms-transform-origin: 50% 50%;
-       -o-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
 }
 
 path {
   -webkit-transform-origin: 50% 50%;
-     -moz-transform-origin: 50% 50%;
-      -ms-transform-origin: 50% 50%;
-       -o-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
 }
 
@@ -259,16 +236,14 @@ html, body {
   height: 100%;
   overflow-scrolling: revert;
   width: 100%;
-  font-size: 1.11111111vw;
+  font-size: 16px;
   background-color: #1B1F2C;
+  z-index: 0;
 }
 
 a {
   text-decoration: none;
   color: inherit;
-  -webkit-transition: color .3s ease, opacity .3s ease;
-  -o-transition: color .3s ease, opacity .3s ease;
-  -moz-transition: color .3s ease, opacity .3s ease;
   transition: color .3s ease, opacity .3s ease;
 }
 
@@ -291,9 +266,7 @@ a {
 [disabled] {
   pointer-events: none !important;
   opacity: .5 !important;
-  -webkit-box-shadow: none !important;
-     -moz-box-shadow: none !important;
-          box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 *::-moz-selection {
@@ -307,22 +280,17 @@ a {
 }
 
 .icon {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .main-wrapper > header,
 .main-wrapper > footer {
-  -webkit-flex-shrink: 0;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 .container-main {
-  max-width: 1160px;
+  padding: 0 20px;
+  max-width: calc(1160px + 20px * 2);
   margin: 0 auto;
 }
 
@@ -355,4 +323,289 @@ a:focus,
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
+  color: white;
+}
+
+.icon {
+  display: inline-flex;
+}
+
+section {
+  position: relative;
+  z-index: 0;
+}
+
+.header-inner {
+  padding: 1.33333333em 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1rem;
+  border-bottom: 2px solid rgba(59, 62, 72, 0.5);
+}
+
+.header-inner {
+  padding-top: 18px;
+}
+
+.header-inner {
+  padding-bottom: 18px;
+}
+
+.header__logo {
+  width: 136px;
+  height: 36px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.header-inner > nav {
+  font-size: 16px;
+}
+
+.header-inner > nav ul {
+  display: flex;
+  align-items: center;
+}
+
+.header-inner > nav ul li + li {
+  margin-left: 20px;
+}
+
+.header__cta {
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+  position: relative;
+}
+
+.header__cta .icon {
+  position: absolute;
+  left: 100%;
+  top: -4px;
+  width: 16px;
+  height: 16px;
+  color: #29BAAC;
+  transition: color .3s ease;
+}
+
+.header__cta:hover,
+.header__cta:focus {
+  color: #29BAAC;
+}
+
+.header__cta:hover .icon,
+.header__cta:focus .icon {
+  color: white;
+}
+
+.hero__content {
+  width: 55%;
+}
+
+.hero__content {
+  margin-top: 44px;
+}
+
+.hero__content h1 {
+  color: white;
+}
+
+.hero__content h1 {
+  font-size: 32px;
+}
+
+.hero__content h1 {
+  line-height: 42px;
+}
+
+.attention,
+.draw-underline {
+  position: relative;
+  display: inline-block;
+}
+
+.attention .icon {
+  color: #29BAAC;
+  position: absolute;
+  left: calc(100% - .05em);
+  top: .05em;
+  width: 0.5em;
+  height: 0.5em;
+}
+
+.draw-underline .icon {
+  position: absolute;
+  color: #29BAAC;
+  width: 100%;
+  bottom: -.15em;
+  left: 0;
+  height: .35em;
+}
+
+.hero__actions {
+  display: flex;
+  align-items: center;
+}
+
+.hero__actions {
+  margin-top: 20px;
+}
+
+.hero__actions {
+  font-size: 16px;
+}
+
+.hero__actions .btn {
+  flex-shrink: 0;
+  width: 220px;
+}
+
+.hero__actions .btn {
+  margin-right: 20px;
+}
+
+.notepad-card {
+  background-color: #1B1F2C;
+  padding: 20px;
+  border: 2px solid rgba(59, 62, 72, 0.5);
+  border-radius: 8px;
+}
+
+.notepad-card__title {
+  margin-top: 16px;
+}
+
+.notepad-card__title {
+  font-size: 20px;
+}
+
+.notepad-card__content {
+  margin-top: 14px;
+  font-size: .875rem;
+}
+
+.btn .value {
+  padding: 20px;
+  color: white;
+  font-weight: 600;
+  border-radius: 8px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.btn .value {
+  font-size: 14px;
+}
+
+.btn-primary {
+  position: relative;
+  transition: -webkit-transform .15s linear;
+  transition: transform .15s linear;
+  transition: transform .15s linear, -webkit-transform .15s linear;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn-primary:hover .value,
+.btn-primary:focus .value {
+  -webkit-transform: none;
+          transform: none;
+}
+
+.btn-primary .value {
+  background: linear-gradient(270deg, #F67668 0%, #F79576 100%);
+  -webkit-transform: translate(-12px, -12px);
+          transform: translate(-12px, -12px);
+  transition: inherit;
+}
+
+.btn-primary:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border: 2px solid rgba(59, 62, 72, 0.5);
+  border-radius: 8px;
+  z-index: -1;
+}
+
+@media screen and (min-width: 600px) {
+  .header-inner {
+    padding-top: calc(18px + 14 * ((100vw - 600px) / 600));
+  }
+  .header-inner {
+    padding-bottom: calc(18px + 14 * ((100vw - 600px) / 600));
+  }
+  .header-inner > nav ul li + li {
+    margin-left: calc(20px + 20 * ((100vw - 600px) / 600));
+  }
+  .hero__content {
+    margin-top: calc(44px + 36 * ((100vw - 600px) / 600));
+  }
+  .hero__content h1 {
+    font-size: calc(32px + 40 * ((100vw - 600px) / 600));
+  }
+  .hero__content h1 {
+    line-height: calc(42px + 44 * ((100vw - 600px) / 600));
+  }
+  .hero__actions {
+    margin-top: calc(20px + 48 * ((100vw - 600px) / 600));
+  }
+  .hero__actions {
+    font-size: calc(16px + 2 * ((100vw - 600px) / 600));
+  }
+  .hero__actions .btn {
+    margin-right: calc(20px + 48 * ((100vw - 600px) / 600));
+  }
+  .notepad-card__title {
+    font-size: calc(20px + 8 * ((100vw - 600px) / 600));
+  }
+  .btn .value {
+    font-size: calc(14px + 2 * ((100vw - 600px) / 600));
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-inner {
+    padding-top: 32px;
+  }
+  .header-inner {
+    padding-bottom: 32px;
+  }
+  .header-inner > nav ul li + li {
+    margin-left: 40px;
+  }
+  .hero__content {
+    margin-top: 80px;
+  }
+  .hero__content h1 {
+    font-size: 72px;
+  }
+  .hero__content h1 {
+    line-height: 86px;
+  }
+  .hero__actions {
+    margin-top: 68px;
+  }
+  .hero__actions {
+    font-size: 18px;
+  }
+  .hero__actions .btn {
+    margin-right: 68px;
+  }
+  .notepad-card__title {
+    font-size: 28px;
+  }
+  .btn .value {
+    font-size: 16px;
+  }
 }
