--- a/public/css/app.css
+++ b/public/css/app.css
@@ -465,15 +465,47 @@ section {
   margin-right: 20px;
 }
 
+.hero__cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 172px 22px 172px 22px 172px;
+  grid-template-columns: repeat(3, 172px);
+  grid-gap: 22px;
+}
+
+.hero__cards {
+  margin-top: 32px;
+}
+
 .notepad-card {
   background-color: #1B1F2C;
   padding: 20px;
+  position: relative;
+}
+
+.notepad-card:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
   border: 2px solid rgba(59, 62, 72, 0.5);
   border-radius: 8px;
+  pointer-events: none;
+}
+
+.notepad-card__icon {
+  width: 32px;
+}
+
+.notepad-card__icon {
+  height: 32px;
 }
 
 .notepad-card__title {
   margin-top: 16px;
+  line-height: 1.15;
 }
 
 .notepad-card__title {
@@ -483,6 +515,28 @@ section {
 .notepad-card__content {
   margin-top: 14px;
   font-size: .875rem;
+}
+
+.notepad__rings {
+  position: absolute;
+  top: 24px;
+  bottom: 24px;
+  right: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.notepad__rings .ring {
+  width: 40px;
+  height: 14px;
+  border-radius: 50px;
+  border: 2px solid rgba(59, 62, 72, 0.5);
+  background-color: #1B1F2C;
+  flex-shrink: 0;
+  -webkit-transform: translateX(28px);
+          transform: translateX(28px);
 }
 
 .btn .value {
@@ -566,6 +620,15 @@ section {
   .hero__actions .btn {
     margin-right: calc(20px + 48 * ((100vw - 600px) / 600));
   }
+  .hero__cards {
+    margin-top: calc(32px + 28 * ((100vw - 600px) / 600));
+  }
+  .notepad-card__icon {
+    width: calc(32px + 4 * ((100vw - 600px) / 600));
+  }
+  .notepad-card__icon {
+    height: calc(32px + 4 * ((100vw - 600px) / 600));
+  }
   .notepad-card__title {
     font-size: calc(20px + 8 * ((100vw - 600px) / 600));
   }
@@ -601,6 +664,15 @@ section {
   }
   .hero__actions .btn {
     margin-right: 68px;
+  }
+  .hero__cards {
+    margin-top: 60px;
+  }
+  .notepad-card__icon {
+    width: 36px;
+  }
+  .notepad-card__icon {
+    height: 36px;
   }
   .notepad-card__title {
     font-size: 28px;
