--- a/resources/sass/sections/_hero.sass
+++ b/resources/sass/sections/_hero.sass
@@ -39,3 +39,9 @@
   flex-shrink: 0
   width: 220px
   +fluid-type(20px, 68px, 'margin-right')
+
+.hero__cards
+  display: grid
+  grid-template-columns: repeat(3, 172px)
+  grid-gap: 22px
+  +fluid-type(32px, 60px, 'margin-top')
