--- a/resources/sass/cards/_notepad-card.sass
+++ b/resources/sass/cards/_notepad-card.sass
@@ -1,13 +1,47 @@
 .notepad-card
   background-color: $bg-color
   padding: 20px
+  position: relative
+
+.notepad-card:before
+  content: ''
+  position: absolute
+  left: 0
+  right: 0
+  bottom: 0
+  top: 0
   border: 2px solid rgba(59, 62, 72, 0.5)
   border-radius: 8px
+  pointer-events: none
+
+.notepad-card__icon
+  +fluid-type(32px, 36px, 'width')
+  +fluid-type(32px, 36px, 'height')
 
 .notepad-card__title
   +fluid-type(20px, 28px)
   margin-top: 16px
+  line-height: 1.15
 
 .notepad-card__content
   margin-top: 14px
   font-size: .875rem
+
+.notepad__rings
+  position: absolute
+  top: 24px
+  bottom: 24px
+  right: 0
+  display: flex
+  flex-direction: column-reverse
+  justify-content: space-between
+  overflow: hidden
+
+.notepad__rings .ring
+  width: 40px
+  height: 14px
+  border-radius: 50px
+  border: 2px solid rgba(59, 62, 72, 0.5)
+  background-color: $bg-color
+  flex-shrink: 0
+  transform: translateX(28px)
