--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -1,8 +1,14 @@
 $lexend-font: 'Lexend', sans-serif
 
 $text-color: #878A94
+$text-black: #232733
+$tile-bg: #232733
 
 $bg-color: #1B1F2C
+$border-color: #353945
+
+$slight-white-bg: rgba(255,255,255, .04)
 
 $orange: #F67668
-$blue: #29BAAC
+$green: #29BAAC
+$blue: #818BD5
