--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -8,12 +8,37 @@
 
 //GENERIC
 @import "generic/header"
+@import "generic/footer"
 
 //SECTIONS
 @import "sections/hero"
+@import "sections/what-is"
+@import "sections/why-get"
+@import "sections/simple-cta"
+@import "sections/our-training"
+@import "sections/how-to-start"
+@import "sections/benefits"
+@import "sections/safe-start"
+@import "sections/faq-section"
+@import "sections/decorated-cta"
+
+//BLOCKS
+@import "blocks/notepad"
+@import "blocks/steps"
+@import "blocks/faq"
+@import "blocks/footer-subscribe"
+
+//TILES
+@import "tiles/why-get-tile"
 
 //CARDS
 @import "cards/notepad-card"
+@import "cards/what-is-card"
+@import "cards/numbered-card"
 
 //INCLUDES
 @import "includes/button"
+@import "includes/attention"
+
+//FORM PARTS
+@import "form-parts/input"
