--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -80,6 +80,7 @@ a:focus,
 h1, h2, h3, h4,h5,h6
   font-weight: 600
   color: white
+  line-height: 1.2
 
 .icon
   display: inline-flex
@@ -87,3 +88,98 @@ h1, h2, h3, h4,h5,h6
 section
   position: relative
   z-index: 0
+
+.section-title
+  text-align: center
+  +fluid-type(32px, 56px)
+
+.section-title--left
+  text-align: left
+
+.section-subtitle--center
+  text-align: center
+
+.section-subtitle
+  +fluid-type(20px, 32px, 'margin-top')
+  +fluid-type(16px, 18px)
+
+section + section
+  +fluid-type(80px, 160px, 'margin-top')
+
+.fz-28-20
+  +fluid-type(20px, 28px)
+
+.fz-28-24
+  +fluid-type(24px, 28px)
+
+.fz-36-24
+  +fluid-type(24px, 36px)
+
+.tile-bg
+  background-color: $tile-bg
+  border-radius: 16px
+  border: 2px solid $border-color
+  position: relative
+  z-index: 0
+
+.tile-bg--no-border
+  border: 0
+
+.notepad__rings
+  position: absolute
+  top: 24px
+  bottom: 24px
+  right: 0
+  display: flex
+  flex-direction: column-reverse
+  justify-content: space-between
+  overflow: hidden
+
+.notepad__rings--left
+  right: auto
+  left: 0
+  transform: scaleX(-1)
+
+.notepad__rings .ring
+  width: 40px
+  height: 14px
+  border-radius: 50px
+  border: 2px solid rgba(59, 62, 72, 0.5)
+  background-color: $bg-color
+  flex-shrink: 0
+  transform: translateX(28px)
+
+.ordered-list
+  margin: 0
+  padding: 0
+  list-style: none
+  counter-reset: why-get-list
+
+.ordered-list > *:before
+  counter-increment: why-get-list
+  content: counter(why-get-list)
+  display: flex
+  align-items: center
+  justify-content: center
+  +fluid-type(32px, 40px, 'width')
+  +fluid-type(32px, 40px, 'height')
+  color: $text-black
+  font-weight: 600
+  +fluid-type(16px, 20px)
+  background: url('../image/ol-item.svg')
+  background-repeat: no-repeat
+  background-size: 100%
+  flex-shrink: 0
+
+.split-line
+  overflow: hidden
+
+.title-animation
+  font-kerning: none
+  -webkit-text-rendering: optimizeSpeed
+  text-rendering: optimizeSpeed
+  -webkit-transform: translateZ(0)
+  transform: translateZ(0)
+
+.title-animation > *
+  display: inline-block
