--- a/resources/sass/cards/_notepad-card.sass
+++ b/resources/sass/cards/_notepad-card.sass
@@ -1,5 +1,5 @@
 .notepad-card
-  background-color: $bg-color
+  background-color: $tile-bg
   padding: 20px
   position: relative
 
@@ -19,29 +19,9 @@
   +fluid-type(32px, 36px, 'height')
 
 .notepad-card__title
-  +fluid-type(20px, 28px)
   margin-top: 16px
   line-height: 1.15
 
 .notepad-card__content
   margin-top: 14px
   font-size: .875rem
-
-.notepad__rings
-  position: absolute
-  top: 24px
-  bottom: 24px
-  right: 0
-  display: flex
-  flex-direction: column-reverse
-  justify-content: space-between
-  overflow: hidden
-
-.notepad__rings .ring
-  width: 40px
-  height: 14px
-  border-radius: 50px
-  border: 2px solid rgba(59, 62, 72, 0.5)
-  background-color: $bg-color
-  flex-shrink: 0
-  transform: translateX(28px)
