--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -181,5 +181,8 @@ section + section
   -webkit-transform: translateZ(0)
   transform: translateZ(0)
 
+.title-animation
+  visibility: hidden
+
 .title-animation > *
   display: inline-block
