--- a/resources/sass/includes/_attention.sass
+++ b/resources/sass/includes/_attention.sass
@@ -29,6 +29,7 @@
   height: .35em
   stroke-dasharray: 311
   stroke-dashoffset: 311
+  z-index: -1
 
 //.draw-underline
 //  background-image: url("../image/draw-underline.svg")
