--- a/resources/sass/cards/_notepad-card.sass
+++ b/resources/sass/cards/_notepad-card.sass
@@ -2,6 +2,7 @@
   background-color: $tile-bg
   padding: 20px
   position: relative
+  border-radius: 8px
 
 .notepad-card:before
   content: ''
@@ -11,7 +12,7 @@
   bottom: 0
   top: 0
   border: 2px solid rgba(59, 62, 72, 0.5)
-  border-radius: 8px
+  border-radius: inherit
   pointer-events: none
 
 .notepad-card__icon
