--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1484,6 +1484,7 @@ footer {
   background-color: #232733;
   padding: 20px;
   position: relative;
+  border-radius: 8px;
 }
 
 .notepad-card:before {
@@ -1494,7 +1495,7 @@ footer {
   bottom: 0;
   top: 0;
   border: 2px solid rgba(59, 62, 72, 0.5);
-  border-radius: 8px;
+  border-radius: inherit;
   pointer-events: none;
 }
 
