--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -131,29 +131,29 @@ section + section
 .tile-bg--no-border
   border: 0
 
-.notepad__rings
-  position: absolute
-  top: 24px
-  bottom: 24px
-  right: 0
-  display: flex
-  flex-direction: column-reverse
-  justify-content: space-between
-  overflow: hidden
-
-.notepad__rings--left
-  right: auto
-  left: 0
-  transform: scaleX(-1)
-
-.notepad__rings .ring
-  width: 40px
-  height: 14px
-  border-radius: 50px
-  border: 2px solid rgba(59, 62, 72, 0.5)
-  background-color: $bg-color
-  flex-shrink: 0
-  transform: translateX(28px)
+//.notepad__rings
+//  position: absolute
+//  top: 24px
+//  bottom: 24px
+//  right: 0
+//  display: flex
+//  flex-direction: column-reverse
+//  justify-content: space-between
+//  overflow: hidden
+//
+//.notepad__rings--left
+//  right: auto
+//  left: 0
+//  transform: scaleX(-1)
+//
+//.notepad__rings .ring
+//  width: 40px
+//  height: 14px
+//  border-radius: 50px
+//  border: 2px solid rgba(59, 62, 72, 0.5)
+//  background-color: $bg-color
+//  flex-shrink: 0
+//  transform: translateX(28px)
 
 .ordered-list
   margin: 0
@@ -201,3 +201,11 @@ section + section
   right: 0
   z-index: -1
   filter: blur(50px)
+
+.clip-svg
+  position: absolute
+  left: 0
+  top: 0
+  width: 0!important
+  height: 0!important
+  pointer-events: none
