--- a/resources/sass/cards/_notepad-card.sass
+++ b/resources/sass/cards/_notepad-card.sass
@@ -1,19 +1,9 @@
 .notepad-card
-  background-color: $tile-bg
   padding: 20px
   position: relative
-  border-radius: 8px
-
-.notepad-card:before
-  content: ''
-  position: absolute
-  left: 0
-  right: 0
-  bottom: 0
-  top: 0
-  border: 2px solid rgba(59, 62, 72, 0.5)
-  border-radius: inherit
-  pointer-events: none
+  transform: translateZ(0)
+  z-index: 0
+  filter: drop-shadow(0px -2px 0px $border-color) drop-shadow(0px 2px 0px $border-color) drop-shadow(-2px 0px 0px $border-color) drop-shadow(2px 0px 0px $border-color)
 
 .notepad-card__icon
   +fluid-type(32px, 36px, 'width')
@@ -26,3 +16,14 @@
 .notepad-card__content
   margin-top: 14px
   font-size: .875rem
+
+.notepad-card__circles
+  position: absolute
+  left: 0
+  top: 0
+  right: 0
+  bottom: 0
+  clip-path: url("#notepad-card-clippath")
+  z-index: -1
+  border-radius: 8px
+  background-color: $tile-bg
