--- a/resources/sass/_default.sass
+++ b/resources/sass/_default.sass
@@ -98,6 +98,9 @@ section
 .section-title
   text-align: center
   +fluid-type(32px, 56px)
+  max-width: 960px
+  margin-left: auto
+  margin-right: auto
 
 .section-title--left
   text-align: left
@@ -209,3 +212,10 @@ section + section
   width: 0!important
   height: 0!important
   pointer-events: none
+
+.img-in-text
+  display: inline-block
+
+.img-in-text img
+  pointer-events: none
+  max-height: 0.8em
