--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -21,12 +21,15 @@
 @import "sections/safe-start"
 @import "sections/faq-section"
 @import "sections/decorated-cta"
+@import "sections/roadmap-section"
+@import "sections/team-section"
 
 //BLOCKS
 @import "blocks/notepad"
 @import "blocks/steps"
 @import "blocks/faq"
 @import "blocks/footer-subscribe"
+@import "blocks/roadmap"
 
 //TILES
 @import "tiles/why-get-tile"
@@ -35,6 +38,8 @@
 @import "cards/notepad-card"
 @import "cards/what-is-card"
 @import "cards/numbered-card"
+@import "cards/roadmap-card"
+@import "cards/team-member"
 
 //INCLUDES
 @import "includes/button"
